fix(openapi): Use custom path finder
To ensure proper logic behind matching current request to OpenAPI operation
to use.

`openapi-core==0.13.3` version ships with `openapi_core.templating.paths.finders.PathFinder`
class, which finds too many paths if OpenAPI schema contains multiple paths with
variables.

Given commit customize path finder logic to not return first result of
`PathFinder._get_servers_iter(...)` call, but to match that current request
full URL pattern ends with `Path.name`.

After fixing https://github.com/p1c2u/openapi-core/issues/226, this code might be
not needed anymore.

Also provide docstrings for reason behind providing custom classes for validation,
unmarshalling data, etc.
